Update to latest Mermaid from GitHub, tweak styles

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -12,4 +12,11 @@ svg
   font-family: didot
 
   .node
-    stroke: none
+    fill: white !important
+    stroke: none !important
+
+  path
+    stroke: white !important
+
+  #arrowhead7 path
+    fill: white !important
