Link to Airbnb isomorphic JavaScript article

--- a/src/index.jade
+++ b/src/index.jade
@@ -246,7 +246,8 @@ html
 
       section
         h3 &mdash; The promise of &mdash;
-        h2 Isomorphic JavaScript
+        h2
+          a(href='http://nerds.airbnb.com/isomorphic-javascript-future-web-apps/') Isomorphic JavaScript
 
       section
         h2.single-words 100% Isomorphic UI Code
