Fix computer monitor image positioning

--- a/src/index.jade
+++ b/src/index.jade
@@ -16,7 +16,8 @@ html
         h3 &mdash; of the &mdash;
         h2 Progressive Web
 
-      section(data-bespoke-backdrop='computer')
+      section
+        img(style='position:absolute;top:10%;left:26%;z-index:-1', src='images/90scomputer.gif')
         h2 HTTP 0.9
         h3 &mdash; circ. 1991 &mdash;
 
