Add React data attributes to sample server HTML

--- a/src/index.jade
+++ b/src/index.jade
@@ -284,14 +284,15 @@ html
       section
         pre.language-markup
           code.
-            &lt;html&gt;
-            &lt;head&gt;&lt;title&gt;My Site&lt;/title&gt;&lt;/head&gt;
-            &lt;body&gt;
-              &lt;h1&gt;Welcome!&lt;/h1&gt;
-              &lt;p&gt;etc...&lt;/p&gt;
-              &lt;script src="my-awesome-app.js"&gt;&lt;/script&gt;
-            &lt;/body&gt;
-            &lt;/html&gt;
+            &lt;div id="app"
+              data-reactid=".23qqlyvw6io"
+              data-react-checksum="509597258"&gt;
+
+              &lt;h1 data-reactid=".23qqlyvw6io.0" &gt;Welcome!&lt;/h1&gt;
+              &lt;p data-reactid=".23qqlyvw6io.1" &gt;etc...&lt;/p&gt;
+
+            &lt;/div&gt;
+            &lt;script src="my-awesome-app.js"&gt;&lt;/script&gt;
 
       section
         pre.mermaid.
