--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -36,8 +36,15 @@ li
   font-family: didot
   font-style: italic
 
+a h4
+  margin: .4em 0
+
 .large
   zoom: 1.4
+
+.avatar
+  width: 100px
+  border-radius: @width
 
 .caption
   font-size: .8em
@@ -78,6 +85,18 @@ li
   transform: none !important
   &.bespoke-backdrop-active
     opacity: 1
+
+.virtual-dom
+  background-image: url('../images/virtual-dom.gif')
+  transform: none !important
+  &.bespoke-backdrop-active
+    opacity: 0.7
+
+.glimmer
+  background-image: url('../images/glimmer.gif')
+  transform: none !important
+  &.bespoke-backdrop-active
+    opacity: 0.8
 
 .stevechampeon
   background-image: url('../images/stevechampeon.jpg')
