--- a/src/index.jade
+++ b/src/index.jade
@@ -205,7 +205,7 @@ html
         h4 Jake Archibald, Google
 
       section(data-bespoke-backdrop='loading')
-        h2 Resilience
+        h2 Designed
         h3 &mdash; for the &mdash;
         h2 real world
 
